2005-03-15  Alan Modra  <amodra@bigpond.net.au>

	* po/es.po: Commit new Spanish translation.

	* po/fr.po: Commit new French translation.

2005-03-14  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* vax-dis.c: Fix spelling error
	(print_insn_vax): Use ".word 0x0012 # Entry mask: r1 r2 >" instead
	of just "Entry mask: < r1 ... >"

2005-03-12  Zack Weinberg  <zack@codesourcery.com>

	* arm-dis.c (arm_opcodes): Document %E and %V.
	Add entries for v6T2 ARM instructions:
	bfc bfi mls strht ldrht ldrsht ldrsbt movw movt rbit ubfx sbfx.
	(print_insn_arm): Add support for %E and %V.
	(thumb_opcodes): Add ARMv6K instructions nop, sev, wfe, wfi, yield.

2005-03-10  Jeff Baker  <jbaker@qnx.com>
	    Alan Modra  <amodra@bigpond.net.au>

	* ppc-opc.c (insert_sprg, extract_sprg): New Functions.
	(powerpc_operands <SPRG>): Call the above.  Bit field is 5 bits.
	(SPRG_MASK): Delete.
	(XSPRG_MASK): Mask off extra bits now part of sprg field.
	(powerpc_opcodes): Asjust mfsprg and mtsprg to suit new mask.  Move
	mfsprg4..7 after msprg and consolidate.

2005-03-09  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* vax-dis.c (entry_mask_bit): New array.
	(print_insn_vax): Decode function entry mask.

2005-03-07  Aldy Hernandez  <aldyh@redhat.com>

	* ppc-opc.c (powerpc_opcodes): Fix encoding of efscfd.

2005-03-05  Alan Modra  <amodra@bigpond.net.au>

	* po/opcodes.pot: Regenerate.

2005-03-03  Ramana Radhakrishnan  <ramana.radhakrishnan@codito.com>

	* arc-dis.c (a4_decoding_class): New enum.
	(dsmOneArcInst): Use the enum values for the decoding class.
	Remove redundant case in the switch for decodingClass value 11.

2005-03-02  Jan Beulich  <jbeulich@novell.com>

	* i386-dis.c (print_insn): Suppress lock prefix printing for cr8...15
	accesses.
	(OP_C): Consider lock prefix in non-64-bit modes.

2005-02-24  Alan Modra  <amodra@bigpond.net.au>

	* cris-dis.c (format_hex): Remove ineffective warning fix.
	* crx-dis.c (make_instruction): Warning fix.
	* frv-asm.c: Regenerate.
